# mlc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: args.mlang  external_functions.mlang  fibonacci.mlang
include/: context.h  dataTypes.hpp  fileOperations.hpp  flag.h  instruction.h  lexar.h  operations.h  parser.h  platform.h  program.h  token.h  tokenizer.hpp  types.h
include/ast/: all.h  ast.h  binop_ast.h  body_ast.h  call_ast.h  deref_ast.h  expression_ast.h  function_ast.h  jump_ast.h  jumpifnot_ast.h  label_ast.h  load_ast.h  program_ast.h  ref_ast.h  return_ast.h  statment_ast.h  store_ast.h
include/ast/mem/: asm.h  memory.h
include/codegen/: asm_instruction.h  base.h  gnu_asm_x86_64.h  instruction.h  ir.h  llvm.h
include/tools/: file.h  format.h  logger.h  utils.h
include/type_system/: func.h  kind.h  module.h  struct.h  type.h  type_info.h  typeid.h  variable.h
mlang-std/: c_std.mlang  io.mlang  std.mlang  system.mlang
mlang-std/internal/: builtins.mlang
mlc-test/: .gitignore  binary_operations.mlang  function_return.mlang  mlc_test.cpp  struct.mlang  struct_return.mlang
src/: fileOperations.cpp  lexar.cpp  mLang.cpp  mlc.cpp  parser.cpp  tokenizer.cpp
src/ast/: binop_ast.cpp  body_ast.cpp  call_ast.cpp  deref_ast.cpp  jump_ast.cpp  load_ast.cpp  program_ast.cpp  ref_ast.cpp  return_ast.cpp  store_ast.cpp
src/codegen/: asm_instruction.cpp  gnu_asm_x86_64.cpp  instruction.cpp  ir.cpp  llvm.cpp
src/type_system/: func.cpp  struct.cpp  type.cpp  type_info.cpp  variable.cpp
test/: .gitignore  args.mlang  firstTest.mlang  float.mlang  fullsyntax.mlang  hello_world.mlang  include.mlang  lib.mlang  lib_user.mlang  pong.mlang  print.mlang  raylib.mlang  simple.mlang  simple_window.mlang  std.mlang  struct.mlang  syntax.mlang
